; ModuleID = '/home/carl/AnghaBench/postgres/contrib/hstore/extr_hstore_gin.c_makeitem.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/hstore/extr_hstore_gin.c_makeitem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VARHDRSZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32, i8)* @makeitem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @makeitem(i8* %0, i32 %1, i8 signext %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  %8 = load i64, i64* @VARHDRSZ, align 8
  %9 = load i32, i32* %5, align 4
  %10 = sext i32 %9 to i64
  %11 = add nsw i64 %8, %10
  %12 = add nsw i64 %11, 1
  %13 = call i64 @palloc(i64 %12)
  %14 = inttoptr i64 %13 to i32*
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i64, i64* @VARHDRSZ, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %16, %18
  %20 = add nsw i64 %19, 1
  %21 = call i32 @SET_VARSIZE(i32* %15, i64 %20)
  %22 = load i8, i8* %6, align 1
  %23 = load i32*, i32** %7, align 8
  %24 = call i8* @VARDATA(i32* %23)
  store i8 %22, i8* %24, align 1
  %25 = load i8*, i8** %4, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %37

27:                                               ; preds = %3
  %28 = load i32, i32* %5, align 4
  %29 = icmp sgt i32 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %27
  %31 = load i32*, i32** %7, align 8
  %32 = call i8* @VARDATA(i32* %31)
  %33 = getelementptr inbounds i8, i8* %32, i64 1
  %34 = load i8*, i8** %4, align 8
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @memcpy(i8* %33, i8* %34, i32 %35)
  br label %37

37:                                               ; preds = %30, %27, %3
  %38 = load i32*, i32** %7, align 8
  ret i32* %38
}

declare dso_local i64 @palloc(i64) #1

declare dso_local i32 @SET_VARSIZE(i32*, i64) #1

declare dso_local i8* @VARDATA(i32*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
